--- a/index.html
+++ b/index.html
@@ -21,23 +21,7 @@
         font-family: 'Orbitron', sans-serif;
       }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.553.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "@react-three/postprocessing": "https://aistudiocdn.com/@react-three/postprocessing@^3.0.4",
-    "@react-three/fiber": "https://aistudiocdn.com/@react-three/fiber@^9.4.0",
-    "zustand": "https://aistudiocdn.com/zustand@^5.0.8",
-    "uuid": "https://aistudiocdn.com/uuid@^13.0.0",
-    "@react-three/drei": "https://aistudiocdn.com/@react-three/drei@^10.7.7",
-    "three": "https://aistudiocdn.com/three@^0.181.1",
-    "postprocessing": "https://aistudiocdn.com/postprocessing@^6.38.0"
-  }
-}
-</script>
+  <script type="module" scr="/index.tsx"></script>
 </head>
   <body>
     <div id="root"></div>
